--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proxy-storage",
+  "name": "web-storage-proxy",
   "version": "1.0.0",
-  "description": "Proxy localstorage and sessionstorage to add serializers and deserializers",
+  "description": "Super simple webstorage proxy adding your own serialialization/deserialization pipeline",
   "main": "index.js",
   "author": "Stan Bondi <stan@fixate.it>",
   "license": "MIT",
